@@ -77,5 +77,17 @@ describe ProjectHook, models: true do
 
       expect(@project_hook.execute(@data, 'push_hooks')).to eq([false, 'SSL error'])
     end
+
+    it "handles 200 status code" do
+      WebMock.stub_request(:post, @project_hook.url).to_return(status: 200, body: "Success")
+
+      expect(@project_hook.execute(@data, 'push_hooks')).to eq([true, 'Success'])
+    end
+
+    it "handles 2xx status codes" do
+      WebMock.stub_request(:post, @project_hook.url).to_return(status: 201, body: "Success")
+
+      expect(@project_hook.execute(@data, 'push_hooks')).to eq([true, 'Success'])
+    end
   end
 end
